# awessome

./: CHANGELOG.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  aggregator.py  awesome.py  awessome.py  awessome_aggregator.py  awessome_demo.py  awessome_new.py  builder.py  requirements.txt  run_awessome.py  scorer.py  setup.cfg  setup.py  similarity_measure.py
awessome/: awessome_aggregator.py  awessome_builder.py  awessome_scorer.py  awessome_similarity.py  vader.txt
lexicon/: labmt.txt
