[metadata]
name = awessome
authors = A. Htait and L. Azzopardi
license = MIT
license-file = LICENSE.txt
url = https://github.com/cumulative-revelations/awessome
description = A Word Embedding Sentiment Scorer Of Many Emotions (awessome) is a framework with the purpose of predicting the sentiment intensity of sentences. Awessome relies on sentiment seed-words and word embedding, where the similarity between the vector representation of two sentences is considered as a reflection of their sentiment similarity.
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Text Processing :: Linguistic
	Topic :: Text Processing :: General
    Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Scientific/Engineering :: Information Analysis
	Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
[bdist_wheel]
universal = 1